Modified script to enable loading ontologies from relative URI.